--- a/EntityLayer/App.config
+++ b/EntityLayer/App.config
@@ -14,4 +14,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="WikiEntities" providerName="MySql.Data.MySqlClient"
+        connectionString="server=localhost;port=3306;database=CodeWikiDb;uid=root;password=1234"/>
+  </connectionStrings>
 </configuration>
